// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabeledInput should be rendered correctly 1`] = `
<div
  className="container root size-36 uui-theme-loveship"
>
  <div
    className="uui-label-top"
  >
    <div>
      <div
        className="container uui-input-box -clickable root size-36 mode-form size-36"
        onBlur={[Function]}
        onFocus={[Function]}
        tabIndex={-1}
      >
        <input
          className="uui-input"
          onChange={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          type="text"
          value="test"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`LabeledInput should be rendered correctly with props 1`] = `
<div
  className="container root size-36 uui-theme-loveship"
>
  <div
    className="uui-label-left"
  >
    <label
      className="uui-label"
    >
      Test label
      <svg
        className="uui-labeled-input-info-icon"
      />
    </label>
    <div
      className="rightChildrenPosition"
    >
      <div
        className="container uui-input-box -clickable root size-36 mode-form size-36"
        onBlur={[Function]}
        onFocus={[Function]}
        tabIndex={-1}
      >
        <input
          className="uui-input"
          onChange={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          type="text"
          value="test"
        />
      </div>
    </div>
  </div>
  <div
    className="uui-invalid-message"
    role="alert"
  >
    Test invalid message
  </div>
</div>
`;
